--- a/src/styles.css
+++ b/src/styles.css
@@ -88,7 +88,7 @@ form button:hover {
 }
 .icons {
     display: flex;
-    margin-left: -60px;
+   
 }
 
 .list {
@@ -134,6 +134,10 @@ form button:hover {
         width: 80%;
         margin-left: 40px;
         margin-top: 40px
+
+    }
+    .icons {
+        margin-left: -60px
     }
 }
 @media screen and (max-width: 375px) {
